add xeditable library

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/angular-xeditable-0.2.0/css/xeditable.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
   </head>
@@ -29,6 +30,7 @@
     </div>
 
     <script src="js/angular.min.js"></script>
+    <script src="lib/angular-xeditable-0.2.0/js/xeditable.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
