--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
 
     <script src="js/angular.min.js"></script>
+    <script src="js/angular-cookies.js"></script>
     <script src="lib/angular-xeditable-0.2.0/js/xeditable.min.js"></script>
     <script src="js/app.js"></script>
   </body>
